--- a/src/Modulus.UI.Avalonia/Components/SideNav.axaml
+++ b/src/Modulus.UI.Avalonia/Components/SideNav.axaml
@@ -10,14 +10,14 @@
     <Grid RowDefinitions="*, Auto">
         <!-- Main Menu -->
         <controls:NavigationView Grid.Row="0" 
-                                 Items="{Binding MainItems, ElementName=Root}"
+                                 ItemsSource="{Binding MainItems, ElementName=Root}"
                                  SelectedItem="{Binding MainSelectedItem, ElementName=Root}"
                                  IsCollapsed="{Binding IsCollapsed, ElementName=Root}"
                                  Margin="0,8,0,0" />
         
         <!-- Bottom Menu -->
         <controls:NavigationView Grid.Row="1" 
-                                 Items="{Binding BottomItems, ElementName=Root}"
+                                 ItemsSource="{Binding BottomItems, ElementName=Root}"
                                  SelectedItem="{Binding BottomSelectedItem, ElementName=Root}"
                                  IsCollapsed="{Binding IsCollapsed, ElementName=Root}"
                                  Margin="0,0,0,10" />
