--- a/src/Modulus.UI.Avalonia/Themes/Controls/NavigationView.axaml
+++ b/src/Modulus.UI.Avalonia/Themes/Controls/NavigationView.axaml
@@ -4,6 +4,7 @@
     
     <!-- ============================================== -->
     <!-- NavigationView Control Template               -->
+    <!-- Inherits from ItemsControl - uses ItemsPresenter -->
     <!-- ============================================== -->
     
     <Style Selector="controls|NavigationView">
@@ -18,24 +19,18 @@
                     <ScrollViewer x:Name="PART_ScrollViewer"
                                   HorizontalScrollBarVisibility="Disabled"
                                   VerticalScrollBarVisibility="Auto">
-                        <ItemsControl x:Name="PART_ItemsHost"
-                                      ItemsSource="{Binding Items, RelativeSource={RelativeSource TemplatedParent}}">
-                            <ItemsControl.ItemsPanel>
-                                <ItemsPanelTemplate>
-                                    <StackPanel/>
-                                </ItemsPanelTemplate>
-                            </ItemsControl.ItemsPanel>
-                            <ItemsControl.ItemTemplate>
-                                <DataTemplate>
-                                    <controls:NavigationViewItem 
-                                        Item="{Binding}"
-                                        IsCollapsed="{Binding IsCollapsed, RelativeSource={RelativeSource AncestorType=controls:NavigationView}}"/>
-                                </DataTemplate>
-                            </ItemsControl.ItemTemplate>
-                        </ItemsControl>
+                        <!-- ItemsPresenter: native ItemsControl binding -->
+                        <ItemsPresenter x:Name="PART_ItemsPresenter"/>
                     </ScrollViewer>
                 </Border>
             </ControlTemplate>
+        </Setter>
+        
+        <!-- Default ItemsPanel -->
+        <Setter Property="ItemsPanel">
+            <ItemsPanelTemplate>
+                <StackPanel/>
+            </ItemsPanelTemplate>
         </Setter>
         
         <!-- Transitions -->
@@ -47,7 +42,7 @@
     </Style>
     
     <!-- ============================================== -->
-    <!-- DataTrigger: Collapsed Mode                   -->
+    <!-- Collapsed Mode                                -->
     <!-- ============================================== -->
     <Style Selector="controls|NavigationView[IsCollapsed=True]">
         <Setter Property="Width" Value="{DynamicResource NavCompactWidth}"/>
