--- a/src/Modulus.UI.Avalonia/Components/TitleBar.axaml
+++ b/src/Modulus.UI.Avalonia/Components/TitleBar.axaml
@@ -36,7 +36,7 @@
                        Foreground="{DynamicResource TitleBarTextBrush}" 
                        VerticalAlignment="Center"/>
             <Border Background="{DynamicResource TitleBarBadgeBackgroundBrush}" 
-                    CornerRadius="4" Padding="6,2" Margin="10,0,0,0"
+                    CornerRadius="4" Padding="6,2" Margin="10,0,0,0" VerticalAlignment="Center"
                     IsVisible="{Binding Badge, ElementName=Root, Converter={x:Static StringConverters.IsNotNullOrEmpty}}">
                 <TextBlock Text="{Binding Badge, ElementName=Root}" 
                            FontSize="10" FontWeight="Bold" 
