feat: add application icons and AppsAddIn icon to icon set
- Add app.ico to Avalonia project Assets and configure ApplicationIcon
- Set MainWindow.axaml Icon property
- Add appicon.png to Blazor/MAUI Resources/AppIcon
- Add favicon.ico to wwwroot and update index.html
- Add AppsAddIn icon (Regular + Filled) from Fluent UI System Icons
- Update Modules menu item to use AppsAddIn icon

--- a/src/Hosts/Modulus.Host.Avalonia/MainWindow.axaml
+++ b/src/Hosts/Modulus.Host.Avalonia/MainWindow.axaml
@@ -3,11 +3,12 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:vm="using:Modulus.Host.Avalonia.Shell.ViewModels"
-        xmlns:ui="using:Modulus.UI.Avalonia.Components"
+        xmlns:ui="using:Modulus.UI.Avalonia.Controls"
         mc:Ignorable="d" d:DesignWidth="1024" d:DesignHeight="768"
         x:Class="Modulus.Host.Avalonia.MainWindow"
         x:DataType="vm:ShellViewModel"
         Title="Modulus.Host.Avalonia"
+        Icon="/Assets/app.ico"
         TransparencyLevelHint="AcrylicBlur"
         Background="Transparent"
         ExtendClientAreaToDecorationsHint="True">
