--- a/src/Modulus.UI.Avalonia/Themes/Generic.axaml
+++ b/src/Modulus.UI.Avalonia/Themes/Generic.axaml
@@ -1,13 +1,14 @@
 <Styles xmlns="https://github.com/avaloniaui"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
     
-    <!-- Resources (Design Tokens) -->
+    <!-- Resources (Design Tokens + Icons) -->
     <Styles.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
                 <ResourceInclude Source="avares://Modulus.UI.Avalonia/Themes/Colors.axaml"/>
                 <ResourceInclude Source="avares://Modulus.UI.Avalonia/Themes/Typography.axaml"/>
                 <ResourceInclude Source="avares://Modulus.UI.Avalonia/Themes/Resources.axaml"/>
+                <ResourceInclude Source="avares://Modulus.UI.Avalonia/Themes/Icons.axaml"/>
             </ResourceDictionary.MergedDictionaries>
         </ResourceDictionary>
     </Styles.Resources>
@@ -15,5 +16,8 @@
     <!-- Control Templates -->
     <StyleInclude Source="avares://Modulus.UI.Avalonia/Themes/Controls/NavigationView.axaml"/>
     <StyleInclude Source="avares://Modulus.UI.Avalonia/Themes/Controls/NavigationViewItem.axaml"/>
+    <StyleInclude Source="avares://Modulus.UI.Avalonia/Themes/Controls/ContentHost.axaml"/>
+    <StyleInclude Source="avares://Modulus.UI.Avalonia/Themes/Controls/TitleBar.axaml"/>
+    <StyleInclude Source="avares://Modulus.UI.Avalonia/Themes/Controls/SideNav.axaml"/>
     
 </Styles>
