refactor: assembly domain architecture and theme resources reorganization
- Add AssemblyDomain architecture for module isolation
- Reorganize UI.Avalonia theme resources structure
- Add IconVariant support for Regular/Filled icons
- Update module csproj files with ModulusAssemblyDomain
- Add UI.Avalonia.Tests project
- Cleanup deprecated theme files

--- a/src/Modulus.UI.Avalonia/Themes/Controls/SideNav.axaml
+++ b/src/Modulus.UI.Avalonia/Themes/Controls/SideNav.axaml
@@ -11,7 +11,7 @@
                     <controls:NavigationView x:Name="PART_MainNavigationView"
                                              Grid.Row="0" 
                                              ItemsSource="{TemplateBinding MainItems}"
-                                             SelectedItem="{TemplateBinding MainSelectedItem, Mode=TwoWay}"
+                                             SelectedItem="{Binding MainSelectedItem, RelativeSource={RelativeSource TemplatedParent}, Mode=TwoWay}"
                                              IsCollapsed="{TemplateBinding IsCollapsed}"
                                              Margin="0,8,0,0" />
                     
@@ -19,7 +19,7 @@
                     <controls:NavigationView x:Name="PART_BottomNavigationView"
                                              Grid.Row="1" 
                                              ItemsSource="{TemplateBinding BottomItems}"
-                                             SelectedItem="{TemplateBinding BottomSelectedItem, Mode=TwoWay}"
+                                             SelectedItem="{Binding BottomSelectedItem, RelativeSource={RelativeSource TemplatedParent}, Mode=TwoWay}"
                                              IsCollapsed="{TemplateBinding IsCollapsed}"
                                              Margin="0,0,0,10" />
                 </Grid>
