--- a/src/Modulus.UI.Avalonia/Themes/DarkTheme.axaml
+++ b/src/Modulus.UI.Avalonia/Themes/DarkTheme.axaml
@@ -20,7 +20,7 @@
     <SolidColorBrush x:Key="NavItemTextBrush" Color="#B0B0B0"/>
     <SolidColorBrush x:Key="NavItemSelectedTextBrush" Color="#FFFFFF"/>
     <SolidColorBrush x:Key="NavItemIconBrush" Color="#909090"/>
-    <SolidColorBrush x:Key="NavItemSelectedIconBrush" Color="#FFFFFF"/>
+    <SolidColorBrush x:Key="NavItemSelectedIconBrush" Color="#6366F1"/><!-- Primary/Accent Color -->
     
     <!-- Content Area - Dark gray -->
     <SolidColorBrush x:Key="ContentBackgroundBrush" Color="#202020"/>
