--- a/src/Modulus.UI.Avalonia/Themes/DefaultTheme.axaml
+++ b/src/Modulus.UI.Avalonia/Themes/DefaultTheme.axaml
@@ -20,6 +20,7 @@
     <SolidColorBrush x:Key="NavItemSelectedTextBrush" Color="#FFFFFF"/>
     <SolidColorBrush x:Key="NavItemTextBrush" Color="#B0B0B0"/>
     <SolidColorBrush x:Key="NavItemIconBrush" Color="#909090"/>
+    <SolidColorBrush x:Key="NavItemSelectedIconBrush" Color="#6366F1"/><!-- Primary/Accent Color -->
     
     <!-- Content Area -->
     <SolidColorBrush x:Key="ContentBackgroundBrush" Color="#202020"/>
