--- a/src/Modulus.UI.Avalonia/Themes/Generic.axaml
+++ b/src/Modulus.UI.Avalonia/Themes/Generic.axaml
@@ -1,14 +1,14 @@
 <Styles xmlns="https://github.com/avaloniaui"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
     
-    <!-- Resources (Design Tokens + Icons) -->
+    <!-- Shared Resources (Design Tokens + Icons) -->
     <Styles.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
-                <ResourceInclude Source="avares://Modulus.UI.Avalonia/Themes/Colors.axaml"/>
-                <ResourceInclude Source="avares://Modulus.UI.Avalonia/Themes/Typography.axaml"/>
-                <ResourceInclude Source="avares://Modulus.UI.Avalonia/Themes/Resources.axaml"/>
-                <ResourceInclude Source="avares://Modulus.UI.Avalonia/Themes/Icons.axaml"/>
+                <ResourceInclude Source="avares://Modulus.UI.Avalonia/Themes/Resources/Colors.axaml"/>
+                <ResourceInclude Source="avares://Modulus.UI.Avalonia/Themes/Resources/Typography.axaml"/>
+                <ResourceInclude Source="avares://Modulus.UI.Avalonia/Themes/Resources/Resources.axaml"/>
+                <ResourceInclude Source="avares://Modulus.UI.Avalonia/Themes/Resources/Icons.axaml"/>
             </ResourceDictionary.MergedDictionaries>
         </ResourceDictionary>
     </Styles.Resources>
