--- a/src/Hosts/Modulus.Host.Blazor/Components/Layout/MainLayout.razor
+++ b/src/Hosts/Modulus.Host.Blazor/Components/Layout/MainLayout.razor
@@ -96,7 +96,20 @@
     <!-- Main Content -->
     <MudMainContent Class="pt-16">
         <MudContainer MaxWidth="MaxWidth.ExtraLarge" Class="pa-4">
-            @Body
+            <ErrorBoundary @ref="_errorBoundary">
+                <ChildContent>
+                    @Body
+                </ChildContent>
+                <ErrorContent Context="ex">
+                    <MudAlert Severity="Severity.Error" Class="my-4">
+                        <MudText Typo="Typo.h6">An error occurred</MudText>
+                        <MudText>@ex.Message</MudText>
+                        <MudButton Variant="Variant.Text" Color="Color.Error" OnClick="ResetError" Class="mt-2">
+                            Try Again
+                        </MudButton>
+                    </MudAlert>
+                </ErrorContent>
+            </ErrorBoundary>
         </MudContainer>
     </MudMainContent>
 </MudLayout>
@@ -136,6 +149,7 @@
     private bool _drawerOpen = true;
     private bool _isDarkMode;
     private MudThemeProvider? _mudThemeProvider;
+    private ErrorBoundary? _errorBoundary;
     private List<MenuItem> _mainMenuItems = new();
     private List<MenuItem> _bottomMenuItems = new();
 
@@ -349,6 +363,11 @@
             
             _ => Icons.Material.Filled.Circle
         };
+    }
+
+    private void ResetError()
+    {
+        _errorBoundary?.Recover();
     }
 
     public void Dispose()
